--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
